# exodus_ads_web

./: Cargo.toml  readme.md
src/: loader.rs  main.rs
src/loader/server/: get_ad_users.ps1  ldap.ps1  ldap.rs  sync.rs  users.rs
src/loader/web/: dashboard.rs  login.rs  middleware.rs  webserver.rs
src/sites/: dashboard.html  index.html  login.html  unauthorized.html
