[package]
name = "exodus_ads_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-session = "0.5"
actix-service = "2.0.2"
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
ldap3 = "0.11.5"
local-ip-address = "0.4"
log = "0.4"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.135"
tokio = { version = "1", features = ["full"] }